RESOLVED FIXED147750
Structures used for tryGetConstantProperty() should be registered first
https://bugs.webkit.org/show_bug.cgi?id=147750
Summary Structures used for tryGetConstantProperty() should be registered first
Filip Pizlo
Reported 2015-08-06 15:07:22 PDT
Patch forthcoming.
Attachments
the patch (4.39 KB, patch)
2015-08-06 15:11 PDT, Filip Pizlo
fpizlo: review+
Filip Pizlo
Comment 1 2015-08-06 15:11:15 PDT
Created attachment 258406 [details] the patch
Saam Barati
Comment 2 2015-08-06 15:34:18 PDT
Comment on attachment 258406 [details] the patch r=me
Michael Saboff
Comment 3 2015-08-06 15:34:51 PDT
Comment on attachment 258406 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=258406&action=review r=me > Source/JavaScriptCore/ChangeLog:9 > + (JSC::DFG::Graph::tryGetConstantProperty): Add an assertion that effect. This should catch the bug sooner. Should the wording be "to that effect"?
Filip Pizlo
Comment 4 2015-08-06 15:36:00 PDT
Comment on attachment 258406 [details] the patch This was reviewed by both Michael and Saam.
Filip Pizlo
Comment 5 2015-08-06 15:36:15 PDT
(In reply to comment #3) > Comment on attachment 258406 [details] > the patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=258406&action=review > > r=me > > > Source/JavaScriptCore/ChangeLog:9 > > + (JSC::DFG::Graph::tryGetConstantProperty): Add an assertion that effect. This should catch the bug sooner. > > Should the wording be "to that effect"? Yup, fixed.
Filip Pizlo
Comment 6 2015-08-06 15:37:29 PDT
Note You need to log in before you can comment on or make changes to this bug.